infrastructure/controllers/observability/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    toolkit.fluxcd.io/tenant: infrastructure
