infrastructure/controllers/observability/alloy-syslog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy-syslog
  namespace: observability
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.2.23
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: alloy
    app.kubernetes.io/instance: alloy
  ports:
    - name: syslog-tcp
      port: 1514
      targetPort: 1514
      protocol: TCP
  externalTrafficPolicy: Local
